--- a/login/index.html
+++ b/login/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 
-   <link rel="manifest" href="manifest.json">
+   <link rel="manifest" href="areamember/manifest.json">
     <meta name="theme-color" content="#000000">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
@@ -150,11 +150,11 @@ document.addEventListener('keydown', e => {
 
 
   <script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('./sw.js')
-      .then(() => console.log("✅ Service Worker registrado com sucesso"))
-      .catch(err => console.error("Erro ao registrar SW:", err));
-  }
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('areamember/sw.js')
+    .then(() => console.log("✅ Service Worker registrado com sucesso"))
+    .catch(err => console.error("Erro ao registrar SW:", err));
+}
   </script>
 
 </body>
