--- a/login/index.html
+++ b/login/index.html
@@ -92,9 +92,10 @@
       📲 Instalar App
     </button>
 
-    <p class="note">*Utiliza el mismo correo electrónico<br> que usaste en la compra.</p>
+    
     <form onsubmit="handleLogin(event)">
       <input type="email" id="email" placeholder="usuario@email.com" required>
+      <p class="note">*Mismo email que usaste en la compra.</p>
       <button type="submit">Entrar</button>
     </form>
   </div>
