--- a/login/index.html
+++ b/login/index.html
@@ -93,11 +93,11 @@
     </button>
 
     
-    <form onsubmit="handleLogin(event)">
-      <input type="email" id="email" placeholder="usuario@email.com" required>
-      <p class="note">*Mismo email que usaste en la compra.</p>
-      <button type="submit">Entrar</button>
-    </form>
+<form onsubmit="handleLogin(event)">
+  <input type="email" id="email" placeholder="usuario@email.com" required  class="mt-2">
+  <p class="note" style="margin-top: 4px;">*Mismo email que usaste en la compra.</p>
+  <button type="submit">Entrar</button>
+</form>
   </div>
 
   <!-- Popup -->
