--- a/login/index.html
+++ b/login/index.html
@@ -94,8 +94,8 @@
 
     
 <form onsubmit="handleLogin(event)">
-  <input type="email" id="email" placeholder="usuario@email.com" required  class="mt-2">
-  <p class="note" style="margin-top: 4px;">*Mismo email que usaste en la compra.</p>
+    <p class="note" style="margin-bottom: 4px;">*Mismo email que usaste en la compra.</p>
+    <input type="email" id="email" placeholder="usuario@email.com" required  class="mt-2">
   <button type="submit">Entrar</button>
 </form>
   </div>
