--- a/login/index.html
+++ b/login/index.html
@@ -94,8 +94,9 @@
 
     
 <form onsubmit="handleLogin(event)">
-    <p class="note" style="margin-bottom: 4px;">*Mismo email que usaste en la compra.</p>
-    <input type="email" id="email" placeholder="usuario@email.com" required  class="mt-2">
+  <p class="note" style="margin-bottom: 4px; font-size: 0.85rem; color: rgba(255,255,255,0.7);">
+    *Mismo email que usaste en la compra. </p>
+  <input type="email" id="email" placeholder="usuario@email.com"  required  style="margin-top: 0; padding-top: 10px;" >
   <button type="submit">Entrar</button>
 </form>
   </div>
