--- a/login/index.html
+++ b/login/index.html
@@ -90,25 +90,25 @@
 
 
   <!-- Frase de boas-vindas -->
-  <p class="text-sm text-gray-300 mb-3">
+<p class="text-sm text-gray-300 mb-0.5">
     Bienvenido al universo secreto de la comunicación persuasiva.
   </p>
 
-    <!-- Botão de instalar -->
-    <button id="installBtn" class="w-full bg-orange-500 hover:bg-orange-600 text-white font-bold py-2 px-4 rounded-lg shadow-lg transition-all mb-4 hidden">
-      📲 Instalar App
-    </button>
+<!-- Botão de instalar (laranja) -->
+<button id="installBtn" class="w-full bg-orange-500 hover:bg-orange-600 text-white font-bold py-2 px-4 rounded-lg shadow-lg transition-all mb-4 mt-1 hidden">
+  📲 Instalar App
+</button>
 
 
 
 
- <!--   
+
 <form onsubmit="handleLogin(event)">
   <p class="note" style="margin-bottom: 4px; font-size: 0.85rem; color: rgba(255,255,255,0.7);">
     *Mismo email que usaste en la compra. </p>
   <input type="email" id="email" placeholder="usuario@email.com"  required  style="margin-top: 0; padding-top: 10px;" >
   <button type="submit">Entrar</button>
-</form>-->
+</form>
 
 
   </div>
