--- a/login/areamember/index.html
+++ b/login/areamember/index.html
@@ -311,8 +311,8 @@ button:hover, a:hover {
    <p class="text-white/70 text-sm mb-4">Aprovecha este contenido extra con grandes enseñanzas.</p>
 <div class="grid grid-cols-1 gap-3">
   <button class="w-full text-left p-4 rounded-xl border border-white/10 bg-white/[.03] hover:bg-white/[.06] hover:border-white/20 transition-all duration-200"
-    onclick="openModal('https://drive.google.com/file/d/1r2l3lWc3jJvR8j0GEuO9Q8BzuUzlEJaz/preview','BONO - 29 Técnicas Secretas de Persuasión Mental (Audiolibro Prohibido)')">
-    1. BONO — 29 Técnicas Secretas de Persuasión Mental (Audiolibro Prohibido)
+    onclick="openModal('https://drive.google.com/file/d/1r2l3lWc3jJvR8j0GEuO9Q8BzuUzlEJaz/preview','BONO - Técnicas Secretas de Persuasión Mental (Audiolibro Prohibido)')">
+    1. BONO — Técnicas Secretas de Persuasión Mental (Audiolibro Prohibido)
   </button>
 
   <button class="w-full text-left p-4 rounded-xl border border-white/10 bg-white/[.03] hover:bg-white/[.06] hover:border-white/20 transition-all duration-200"
