--- a/login/index.html
+++ b/login/index.html
@@ -94,8 +94,10 @@
   Bienvenido al universo secreto de la comunicación persuasiva.
 </p>
 
-<!-- Botão de instalar (laranja) -->
-<button id="installBtn" class="w-full bg-orange-500 hover:bg-orange-600 text-white font-bold py-2 px-4 rounded-lg shadow-lg transition-all mb-4 mt-1 hidden">
+<!-- Botão de instalar (laranja puro) -->
+<button id="installBtn"
+  class="w-full font-bold py-2 px-4 rounded-lg shadow-lg transition-all mb-4 mt-1 hidden text-white"
+  style="background: linear-gradient(90deg, #ff7a00, #ff5100); box-shadow: 0 0 15px #ff7a0066;">
   📲 Instalar App
 </button>
 
